﻿# Version 2.1.0 - Coming soon...
- Check Future Updates

# Version 2.0.2 - Minor Tweaks and Fixes
- Added moderator commands (-help moderation)
- Added an error message when an unimplemented game is tried
- Improved user creation
- Improved help command
- Updated bot library

# Version 2.0.1 - Mostly Rewritten
- Added improved relationship command (-ship user)
- Added better command error feedback
- Added command to add censored words (-settings addcensor <word>)
- Added userdata
- Added profile command (-profile <@user>)
- Fixed SQL error on relationship command
- Fixed issues with server settings
- Minor tweaks
- Optimised bot restarts
- Optimised fun commands (roast, compliment, punish, punishme, joke, pickup and kill)

# Version 2.0.0 - The Rewrite
- Rewrote Lori's Angel from Scratch (Lori's Angel v2)
- Added moderation features (Enable/Disable for your guild, default: disabled)
- Added all new user commands (-help user)
- Added guild settings command (-settings)
- Added changelog command (You using it)
- Removed -crack command
- Removed currency (Will be readded at a later date)
- Removed donate command (Will be introduced to the webpanel)
- Removed all old user commands
- Removed games to be rewritten

# Future Updates
- (v2.1.0) Return of connect4, tictactoe, snakes&ladders and blackjack
- (v2.1.1) Currency and Leaderboards
- (v2.2.0) Webpanel